k8s/elastic-operator/resources/render/elastic-webhook.k8s.elastic.co-ValidatingWebhookConfiguration.yml
---
# Source: eck-operator/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: elastic-webhook.k8s.elastic.co
  labels:
    control-plane: elastic-operator
    app.kubernetes.io/version: "2.10.0"
webhooks:
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-agent-k8s-elastic-co-v1alpha1-agent
    failurePolicy: Ignore
    name: elastic-agent-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - agent.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - agents
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-apm-k8s-elastic-co-v1-apmserver
    failurePolicy: Ignore
    name: elastic-apm-validation-v1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - apm.k8s.elastic.co
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - apmservers
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-apm-k8s-elastic-co-v1beta1-apmserver
    failurePolicy: Ignore
    name: elastic-apm-validation-v1beta1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - apm.k8s.elastic.co
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - apmservers
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-beat-k8s-elastic-co-v1beta1-beat
    failurePolicy: Ignore
    name: elastic-beat-validation-v1beta1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - beat.k8s.elastic.co
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - beats
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-enterprisesearch-k8s-elastic-co-v1-enterprisesearch
    failurePolicy: Ignore
    name: elastic-ent-validation-v1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - enterprisesearch.k8s.elastic.co
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - enterprisesearches
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-enterprisesearch-k8s-elastic-co-v1beta1-enterprisesearch
    failurePolicy: Ignore
    name: elastic-ent-validation-v1beta1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - enterprisesearch.k8s.elastic.co
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - enterprisesearches
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-elasticsearch-k8s-elastic-co-v1-elasticsearch
    failurePolicy: Ignore
    name: elastic-es-validation-v1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - elasticsearch.k8s.elastic.co
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - elasticsearches
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-elasticsearch-k8s-elastic-co-v1beta1-elasticsearch
    failurePolicy: Ignore
    name: elastic-es-validation-v1beta1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - elasticsearch.k8s.elastic.co
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - elasticsearches
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-ems-k8s-elastic-co-v1alpha1-mapsservers
    failurePolicy: Ignore
    name: elastic-ems-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - maps.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - mapsservers
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-kibana-k8s-elastic-co-v1-kibana
    failurePolicy: Ignore
    name: elastic-kb-validation-v1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - kibana.k8s.elastic.co
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - kibanas
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-kibana-k8s-elastic-co-v1beta1-kibana
    failurePolicy: Ignore
    name: elastic-kb-validation-v1beta1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - kibana.k8s.elastic.co
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - kibanas
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-autoscaling-k8s-elastic-co-v1alpha1-elasticsearchautoscaler
    failurePolicy: Ignore
    name: elastic-esa-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - autoscaling.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - elasticsearchautoscalers
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-scp-k8s-elastic-co-v1alpha1-stackconfigpolicies
    failurePolicy: Ignore
    name: elastic-scp-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - stackconfigpolicy.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - stackconfigpolicies
  - clientConfig:
      service:
        name: elastic-webhook-server
        namespace: elastic-system
        path: /validate-logstash-k8s-elastic-co-v1alpha1-logstash
    failurePolicy: Ignore
    name: elastic-logstash-validation-v1alpha1.k8s.elastic.co
    matchPolicy: Exact
    admissionReviewVersions: [v1, v1beta1]
    sideEffects: None
    rules:
      - apiGroups:
          - logstash.k8s.elastic.co
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - logstashes
